src/objects/OnlineApplication__c.object
<CustomObject>
    <fields>
        <fullName>Card_Shipping_State__c</fullName>
        <label>Card Shipping State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Card_Shipping_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cards_Shipped_Date__c</fullName>
        <description>The date the cards were shipped. Updated daily with the tracking numbers.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the cards were shipped. Updated daily with the tracking numbers.</inlineHelpText>
        <label>Cards Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cards_Shipped_old__c</fullName>
        <description>obsolete - we are using the date/time field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cards Shipped_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cards_Shipped_text__c</fullName>
        <description>Internal use for Account Setup Team only</description>
        <inlineHelpText>Internal use for Account Setup Team only</inlineHelpText>
        <label>Cards Shipped text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier_ID_Added_MM_DD_YYYY__c</fullName>
        <formula>LPAD(TEXT(MONTH(Account__r.Carrier_ID_Added__c)), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp;
LPAD(TEXT(DAY(Account__r.Carrier_ID_Added__c)), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp; 
TEXT(YEAR(Account__r.Carrier_ID_Added__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier ID Added MM/DD/YYYY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_ID_Added_PB__c</fullName>
        <description>Field updated by process builder once EFS DW adds the Carrier ID.
Used to trigger welcome emails from Online Application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Carrier ID Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Carrier_ID_Added__c</fullName>
        <formula>Account__r.Carrier_ID_Added__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier ID Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier_ID_Number__c</fullName>
        <formula>Account__r.Carrier_ID__c</formula>
        <label>Carrier ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_products_allowed__c</fullName>
        <description>Requested by Credit Analyst</description>
        <inlineHelpText>Internal Credit Analyst use only</inlineHelpText>
        <label>Cash products allowed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The 10-digit mobile phone number which is used for urgent communications related to your business operations.</inlineHelpText>
        <label>Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Change_to_Authorizing_Officer_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Change “ship to” address to the Authorizing Officer’s address.</inlineHelpText>
        <label>Change to Authorizing Officer Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checking_Account_Number__c</fullName>
        <label>Checking Account #</label>
        <length>17</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Online_Applications_Compliance_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Decision Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Decision__c</fullName>
        <label>Compliance Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_ABA_Routing_Number__c</fullName>
        <label>Confirm ABA Routing #</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Confirm_Checking_Account_Number__c</fullName>
        <label>Confirm Checking Account #</label>
        <length>17</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Year__c</fullName>
        <description>Year present management assumed control of this business</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Control Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Online_Applications_Credit_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Decision__c</fullName>
        <inlineHelpText>Credit Analyst use only</inlineHelpText>
        <label>Credit Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Approved-Requested</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved-Counter Offer</fullName>
                </value>
                <value>
                    <fullName>Approved-Secured Requested</fullName>
                </value>
                <value>
                    <fullName>Approved-Counter Accepted</fullName>
                </value>
                <value>
                    <fullName>Approved-Secure Accepted</fullName>
                </value>
                <value>
                    <fullName>Refused-Counter Offer</fullName>
                </value>
                <value>
                    <fullName>Refused-Secured</fullName>
                </value>
                <value>
                    <fullName>Declined-Prepay/Secured Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Follow_up_Time__c</fullName>
        <description>Submitted to Sales for Review - Returned to Sales for Credit Follow-up
                If Submitted to Sales for Review is BLANK, Current Date/Time - Returned to Sales for Credit Follow-up</description>
        <formula>IF(ISBLANK( Submitted_to_Sales_for_Review__c ), 
  (TODAY()- (DATEVALUE(Returned_to_Sales_for_Credit_Follow_up__c))), 
  (DATEVALUE(Submitted_to_Sales_for_Review__c ))-(DATEVALUE( Returned_to_Sales_for_Credit_Follow_up__c )))</formula>
        <inlineHelpText>Submitted to Sales for Review - Returned to Sales for Credit Follow-up
                If Submitted to Sales for Review is BLANK, Current Date/Time - Returned to Sales for Credit Follow-up</inlineHelpText>
        <label>Credit Follow-up Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Per_Truck_Slip_Seat__c</fullName>
        <formula>Offer__r.Credit_Limit_Per_Truck_Slip_Seat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Limit Per Truck - Slip Seat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Per_Truck__c</fullName>
        <formula>Offer__r.Credit_Limit_Per_Truck__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Limit Per Truck</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Approved__c</fullName>
        <description>Field requested from Credit Analyst</description>
        <inlineHelpText>For Credit Analyst only</inlineHelpText>
        <label>Credit Line Approved</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Check__c</fullName>
        <label>Credit Line Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Line_Percentage_Of_Requested__c</fullName>
        <formula>IF(Credit_Line_Requested__c &gt; 0, Credit_Line_Recommendation__c / Credit_Line_Requested__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Line Percentage Of Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Recommendation__c</fullName>
        <label>Credit Line Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Requested__c</fullName>
        <inlineHelpText>Fleet One recommends $2,000 per truck and $3,000 per truck for team drivers.</inlineHelpText>
        <label>Credit Line Requested</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Queue__c</fullName>
        <description>Determines if App Number is Odd or Even. For Credit Assignments.</description>
        <formula>IF(MOD(value(right(Name, 5)),2)=0,&quot;Even&quot;,&quot;Odd&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if App Number is Odd or Even. For Credit Assignments.</inlineHelpText>
        <label>Credit Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Recommendation__c</fullName>
        <label>Credit Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend Approve</fullName>
                </value>
                <value>
                    <fullName>Recommend Review</fullName>
                </value>
                <value>
                    <fullName>Recommend Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cycle ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_CSAD_High_Credit__c</fullName>
        <label>DNB CSAD High Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_City_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB City Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Confidence_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Confidence Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Credit_Line_Recommendation__c</fullName>
        <label>DNB Credit Line Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_Lookup_Hits__c</fullName>
        <label># of DNB Lookup Hits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Lookup__c</fullName>
        <formula>HYPERLINK(&apos;/apex/DNBAdvancedLookup?applicationId=&apos; + Id, &apos;View Matches&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNB Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Match_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Match Grade</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Match_Score__c</fullName>
        <label>DNB Match Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Model__c</fullName>
        <label>DNB Model</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Name_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Name Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Name_Match_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Name Match Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Postal_Code_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Postal Code Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Reason_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Reason Code</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DNB_Resolution_Check__c</fullName>
        <label>DNB Resolution Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decision_Engine_Check</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolved DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolved Business Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State / Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_SBFE_High_Credit__c</fullName>
        <label>DNB SBFE High Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_SBRI_Card_Score__c</fullName>
        <label>DNB SBRI Card Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_SBRI_Check__c</fullName>
        <label>DNB Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decision_Engine_Check</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_SBRI_High_Credit_Amount__c</fullName>
        <label>DNB SBRI High Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_SBRI_Score__c</fullName>
        <label>DNB SBRI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Score__c</fullName>
        <description>Raw Model Score</description>
        <label>DNB Custom Model Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_State_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB State Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Street_Name_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Street Name Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Street_Number_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Street Number Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Trade_Lines__c</fullName>
        <label>DNB # of Trade Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOT_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOT #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Duns #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Cash_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Daily Cash Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_DEF_Limit__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Daily DEF Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Fuel_Gallons__c</fullName>
        <defaultValue>250</defaultValue>
        <label>ULSD Fuel Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Fuel_Limit__c</fullName>
        <label>Daily Fuel Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Misc_Limit__c</fullName>
        <label>Daily Misc. Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Entry_Stage__c</fullName>
        <label>Data Entry Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Information Complete</fullName>
                </value>
                <value>
                    <fullName>Account Setup Complete</fullName>
                </value>
                <value>
                    <fullName>Card Setup Complete</fullName>
                </value>
                <value>
                    <fullName>Review Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Decisioned__c</fullName>
        <description>When status = Decisioned</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When status = Decisioned</inlineHelpText>
        <label>Decisioned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sent_To_Forte__c</fullName>
        <description>Date the App was sent to Forte for review</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the App was sent to Forte for review</inlineHelpText>
        <label>Date Sent To Forte</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_of_Payment__c</fullName>
        <description>To be removed at a later date.
Replaced by &quot;Days of Payment&quot;</description>
        <label>Day of Payment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Of_Payment__c</fullName>
        <label>Days Of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Monday / Tuesday</fullName>
                </value>
                <value>
                    <fullName>Monday / Tuesday / Wednesday</fullName>
                </value>
                <value>
                    <fullName>Monday / Tuesday / Thursday</fullName>
                </value>
                <value>
                    <fullName>Monday / Tuesday / Friday</fullName>
                </value>
                <value>
                    <fullName>Monday / Wednesday</fullName>
                </value>
                <value>
                    <fullName>Monday / Wednesday / Thursday</fullName>
                </value>
                <value>
                    <fullName>Monday / Wednesday / Friday</fullName>
                </value>
                <value>
                    <fullName>Monday / Thursday</fullName>
                </value>
                <value>
                    <fullName>Monday / Friday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Tuesday / Wednesday</fullName>
                </value>
                <value>
                    <fullName>Tuesday / Wednesday / Thursday</fullName>
                </value>
                <value>
                    <fullName>Tuesday / Wednesday / Friday</fullName>
                </value>
                <value>
                    <fullName>Tuesday / Thursday</fullName>
                </value>
                <value>
                    <fullName>Tuesday / Thursday / Friday</fullName>
                </value>
                <value>
                    <fullName>Tuesday / Friday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday / Thursday</fullName>
                </value>
                <value>
                    <fullName>Wednesday / Thursday / Friday</fullName>
                </value>
                <value>
                    <fullName>Wednesday / Friday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Thursday / Friday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Comments__c</fullName>
        <description>Requested by Credit Analyst</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Credit Analyst Use Only</inlineHelpText>
        <label>Decision Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decisioned_Time__c</fullName>
        <description>Decisioned - Submitted to Credit</description>
        <formula>(Date_Decisioned__c )-(Submitted_to_Credit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Decisioned - Submitted to Credit</inlineHelpText>
        <label>Decisioned Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Bill_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Bill Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Bill_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>direct Bill security type</description>
        <inlineHelpText>direct Bill security type</inlineHelpText>
        <label>Direct Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_Setup_Count__c</fullName>
        <description>This is a count of the Driver Setups in the related object. Used in a validation rule</description>
        <inlineHelpText>This is a count of the Driver Setups in the related object. Used in a validation rule</inlineHelpText>
        <label>Driver Setup Count</label>
        <summaryForeignKey>OnlineApplicationDriverSetup__c.Online_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prompt For Driver #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The address used to receive email communications for your business.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Embossing_Line_1_Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Embossing Line 1 (Company Name)</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergreen_Letter_of_Credit_Amount__c</fullName>
        <label>Evergreen Letter of Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Evergreen_Letter_of_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Evergreen letter security type</description>
        <label>Evergreen Letter of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Account_Exposure_Hits__c</fullName>
        <label># of Existing Account Exposure Hits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Exposure_Check__c</fullName>
        <label>Existing Exposure Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decision_Engine_Check</valueSetName>
        </valueSet>
    </fields>
</CustomObject>